# msstore_cdn

./: Cargo.toml  README.md  build.rs  msstore_cdn.exe.manifest  msstore_cdn.rc  setup.iss
src/: main.rs
